reworked copy clipboard handler

--- a/plugins/forms/script.editor/menu.html
+++ b/plugins/forms/script.editor/menu.html
@@ -2,7 +2,7 @@
 <ul>
 <li><span ONCLICK="javascript:CIRCLESformsSCRIPTEDITORcodemanagerNEW();">New</span></li>
 <li><span ONCLICK="javascript:CIRCLESformsSCRIPTEDITORcodemanagerCLEAN();">Clean</span></li>
-<li><span ID="CIRCLESformsSCRIPTEDITORcopyBTN" data-clipboard-target="CIRCLESformsSCRIPTEDITORtextarea">Copy</span></li>
+<li><span ID="CIRCLESformsSCRIPTEDITORcopyBTN" ONCLICK="javascript:copy_to_clipboard($('#CIRCLESformsSCRIPTEDITORtextarea').val());">Copy</span></li>
 <li><span ID="CIRCLESformsSCRIPTEDITORrecordBTNID" ONCLICK="javascript:CIRCLESformsSCRIPTEDITORcodemanagerLISTadd();">Record</span></li>
 <li><span ID="CIRCLESformsSCRIPTEDITORcodeBTN">Code</span>
 		<ul>
