fixed minor bugs for all plugins@embeddings

--- a/plugins/embeddings/grandma.parabolic/menu.html
+++ b/plugins/embeddings/grandma.parabolic/menu.html
@@ -1,7 +1,7 @@
 <nav id="primary_nav_wrap">
 <ul>
 <li><span ONCLICK="javascript:if ( confirm('Confirm to clean traces ?') ) $('[id^=PLUGIN_PARAM_]').val('');" ID="PLUGINcleanBTN">Clean</span></li>
-<li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_INIT(NO,YES);CIRCLESembeddingsGRANDMAPARABOLIC_COMP();GLOB_PLUGIN_WIZARD_STEP(0.1,NO);" ID="PLUGINparamsBTN">Set</span></li>
+<li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_INIT(NO,YES);CIRCLESembeddingsGRANDMAPARABOLIC_COMP();GLOB_PLUGIN_WIZARD_STEP(0.1,NO);" ID="PLUGINsetBTN">Set</span></li>
 <li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsGRANDMAPARABOLIC_REGISTER_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
 <li><span ONCLICK="javascript:GLOB_PLUGIN_WIZARD_STEP(2.1,null,null,W_PLANE);" ID="PLUGINrenderBTN">Render</span></li>
 <li><span>Support</span>
