--- a/plugins/embeddings/earle/menu.html
+++ b/plugins/embeddings/earle/menu.html
@@ -1,7 +1,7 @@
 <nav id="primary_nav_wrap">
 <ul>
 <li><span ONCLICK="javascript:if ( confirm('Confirm to clean traces ?') ) $('[id^=PLUGIN_PARAM_]').val('');" ID="PLUGINcleanBTN">Clean</span></li>
-<li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_INIT(NO,YES);CIRCLESembeddingsEARLE_COMP();GLOB_PLUGIN_WIZARD_STEP(0.1,NO);" ID="PLUGINparamsBTN">Set</span></li>
+<li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_INIT(NO,YES);CIRCLESembeddingsEARLE_COMP();GLOB_PLUGIN_WIZARD_STEP(0.1,NO);" ID="PLUGINsetBTN">Set</span></li>
 <li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsEARLE_REGISTER_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
 <li><span ONCLICK="javascript:GLOB_PLUGIN_WIZARD_STEP(2.1,null,null,W_PLANE);" ID="PLUGINrenderBTN">Render</span></li>
 <li><span>Support</span>
