fixed methods for plugins

--- a/plugins/embeddings/general.purpose/menu.html
+++ b/plugins/embeddings/general.purpose/menu.html
@@ -1,10 +1,10 @@
 <nav id="primary_nav_wrap">
 <ul>
-<li><span ONCLICK="javascript:CIRCLESembeddingsGENERALPURPOSE_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsGENERALPURPOSE_REGISTER_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
+<li><span ONCLICK="javascript:CIRCLESembeddingsGENERALPURPOSE_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsGENERALPURPOSE_RECORD_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
 <li><span ONCLICK="javascript:GLOB_PLUGIN_WIZARD_STEP(2.1,null,null,W_PLANE);" ID="PLUGINrenderBTN">Render</span></li>
 <li><span>Support</span>
     <ul>
-        <li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_REGISTER_PARAMS();">Register</span></li>
+        <li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_RECORD_PARAMS();">Record params</span></li>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_OPEN_METHOD_FORM();">Method</span></li>
         <li><span ONCLICK="javascript:CIRCLESembeddingsGENERALPURPOSE_COMMENT();">Comment</span></li>
     </ul>
@@ -17,11 +17,9 @@
 </li>
 <li><span>Show</span>
     <ul>
-        <li><span ONCLICK="javascript:CIRCLESembeddingsEARLE_TOGGLE_GENS();" ID="PLUGIN_GENSTOGGLE_BTN">Panel</span></li>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_GENS_PATTERN_SHOW('PLUGIN_PATTERNS');">Patterns</span></li>
     </ul>
 </li>
-<li><span ONCLICK="javascript:CIRCLESembeddingsGENERALPURPOSE_MINIMAXI_TOGGLE();" ID="PLUGIN_MINIMAXI_BTN">Mini</span></li>
 <li><span>?</span>
     <ul>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_DISPLAY_INFOS(%indexref%);">Info</span></li>
