--- a/plugins/embeddings/grandma.parabolic/menu.html
+++ b/plugins/embeddings/grandma.parabolic/menu.html
@@ -2,21 +2,20 @@
 <ul>
 <li><span ONCLICK="javascript:if ( confirm('Confirm to clean traces ?') ) $('[id^=PLUGIN_PARAM_]').val('');" ID="PLUGINcleanBTN">Clean</span></li>
 <li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_INIT(NO,YES);CIRCLESembeddingsGRANDMAPARABOLIC_COMP();GLOB_PLUGIN_WIZARD_STEP(0.1,NO);" ID="PLUGINsetBTN">Set</span></li>
-<li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsGRANDMAPARABOLIC_REGISTER_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
+<li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_CONFIG();GLOB_PLUGIN_WIZARD_STEP(1.1,YES);CIRCLESembeddingsGRANDMAPARABOLIC_RECORD_PARAMS();" ID="PLUGINinitBTN">Init</span></li>
 <li><span ONCLICK="javascript:GLOB_PLUGIN_WIZARD_STEP(2.1,null,null,W_PLANE);" ID="PLUGINrenderBTN">Render</span></li>
 <li><span>Support</span>
     <ul>
-        <li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_REGISTER_PARAMS();">Register</span></li>
+        <li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_RECORD_PARAMS();">Record params</span></li>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_OPEN_METHOD_FORM();">Method</span></li>
     </ul>
 </li>
 <li><span>Show</span>
     <ul>
-        <li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_TOGGLE_GENS();" ID="PLUGIN_GENSTOGGLE_BTN">Panel</span></li>
+        <li><span ONCLICK="javascript:$('#PLUGIN_TOGGLE_PREVIEW_BTN').trigger('click');" ID="PLUGIN_GENSTOGGLE_BTN">Panel</span></li>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_GENS_PATTERN_SHOW('PLUGIN_PATTERNS');">Patterns</span></li>
     </ul>
 </li>
-<li><span ONCLICK="javascript:CIRCLESembeddingsGRANDMAPARABOLIC_MINIMAXI_TOGGLE();" ID="PLUGIN_MINIMAXI_BTN">Mini</span></li>
 <li><span>?</span>
     <ul>
         <li><span ONCLICK="javascript:GLOB_PLUGIN_DISPLAY_INFOS(%indexref%);">Info</span></li>
