fix listings and bugs in multi-thread

--- a/interface/circles.interface.default.html
+++ b/interface/circles.interface.default.html
@@ -1,38 +1,27 @@
-<table cellpadding=0 cellspacing=0 valign="top" BORDER="0" WIDTH="100%">
+<table valign="top" WIDTH="100%">
 <tr>
     <td VALIGN="top" ALIGN="center" ID="ZPLANEtd">
     <DIV ID="PANELleft" STYLE="position:relative;" VALIGN="top">
-    <table cellpadding=0 cellspacing=0 valign="top" BORDER="0">
-    <tr>
-        <td VALIGN="top" ID="ZplaneCOORDScontainer" STYLE="width:auto;">
-        <table cellpadding=0 cellspacing=0 valign="top" BORDER="0">
-        <tr>
-        		<td VALIGN="top" COLSPAN="10" ALIGN="center">
-        		<table ALIGN="center" WIDTH="100%">
-        		<tr>
-						<td VALIGN="bottom" ALIGN="center" STYLE="color:yellow;">Z-plane</td>
-						<td></td>
-            <td WIDTH="60" STYLE="color:white;">Coords in</td>
-						<td WIDTH="4"></td>
-            <td WIDTH="80" VALIGN="bottom" ALIGN="center" STYLE="color:yellow;" ID="ZPLANEcoordsCATEGORY">cartesian</td>
-						</tr>
-						</table>
-						</td>
-				</tr>
-				<tr><td HEIGHT="5"></td></tr>
-        <tr>
-            <td WIDTH="10"></td>
-            <td VALIGN="bottom" STYLE="color:yellow;">X</td>
+    <table valign="top">
+	<tr>
+		<td VALIGN="top">
+       	<table>
+       	<tr>
+			<td VALIGN="bottom" ALIGN="center" STYLE="font-size:11pt;color:yellow;">Z-plane</td>
+			<td WIDTH="20"></td>
+			<td VALIGN="bottom" ALIGN="center" STYLE="font-size:11pt;color:white;" ID="ZPLANEcoordsCATEGORY">cartesian</td>
+            <td WIDTH="20"></td>
+            <td VALIGN="bottom" STYLE="font-size:11pt;color:yellow;">X</td>
             <td WIDTH="3"></td>
-            <td VALIGN="bottom" ID="ZplaneX" WIDTH="120" STYLE="font-size:7pt;color:white;"></td>
+            <td VALIGN="bottom" ID="ZplaneX" WIDTH="170" STYLE="font-size:11pt;color:white;"></td>
             <td WIDTH="15"></td>
-            <td VALIGN="bottom" STYLE="color:yellow;">Y</td>
+            <td VALIGN="bottom" STYLE="font-size:11pt;color:yellow;">Y</td>
             <td WIDTH="3"></td>
-            <td VALIGN="bottom" ID="ZplaneY" WIDTH="120" STYLE="font-size:7pt;color:white;"></td>
-      	</tr>
-        </table>
-        </td>
-    </tr>
+            <td VALIGN="bottom" ID="ZplaneY" WIDTH="170" STYLE="font-size:11pt;color:white;"></td>
+		</tr>
+		</table>
+		</td>
+	</tr>
     <tr><td HEIGHT="10"></td></tr>
     <tr><td VALIGN="top" ALIGN="center"><DIV ALIGN="center" STYLE="position:relative;background-color:white;" ID="ZPLANElayers_pile"></DIV></td></tr>
     <tr><td HEIGHT="10"></td></tr>
@@ -42,37 +31,26 @@
     <td WIDTH="1"></td>
     <td VALIGN="top" ALIGN="center" ID="WPLANEtd" STYLE="height:auto;">
     <DIV ID="PANELright" STYLE="position:relative;height:auto;" VALIGN="top">
-    <table cellpadding=0 cellspacing=0 valign="top" BORDER="0">
-    <tr>
-        <td VALIGN="top" ID="WplaneCOORDScontainer" STYLE="width:auto;">
-        <table cellpadding=0 cellspacing=0 valign="top" BORDER="0">
-        <tr>
-        		<td VALIGN="top" COLSPAN="10" ALIGN="center">
-        		<table ALIGN="center" WIDTH="100%">
-        		<tr>
-						<td VALIGN="bottom" ALIGN="center" STYLE="color:yellow;">W-plane</td>
-						<td></td>
-            <td WIDTH="60" STYLE="color:white;">Coords in</td>
-						<td WIDTH="4"></td>
-            <td WIDTH="80" VALIGN="bottom" ALIGN="center" STYLE="color:yellow;" ID="WPLANEcoordsCATEGORY">cartesian</td>
-						</tr>
-						</table>
-						</td>
-				</tr>
-				<tr><td HEIGHT="5"></td></tr>
-        <tr>
-            <td WIDTH="10"></td>
-            <td VALIGN="bottom" STYLE="color:yellow;">X</td>
+    <table valign="top">
+	<tr>
+		<td VALIGN="top">
+       	<table>
+       	<tr>
+			<td VALIGN="bottom" ALIGN="center" STYLE="font-size:11pt;color:yellow;">W-plane</td>
+			<td WIDTH="20"></td>
+			<td VALIGN="bottom" ALIGN="center" STYLE="font-size:11pt;color:white;" ID="WPLANEcoordsCATEGORY">cartesian</td>
+            <td WIDTH="20"></td>
+            <td VALIGN="bottom" STYLE="font-size:11pt;color:yellow;">X</td>
             <td WIDTH="3"></td>
-            <td VALIGN="bottom" ID="WplaneX" WIDTH="120" STYLE="font-size:7pt;color:white;"></td>
+            <td VALIGN="bottom" ID="WplaneX" WIDTH="170" STYLE="font-size:11pt;color:white;"></td>
             <td WIDTH="15"></td>
-            <td VALIGN="bottom" STYLE="color:yellow;">Y</td>
+            <td VALIGN="bottom" STYLE="font-size:11pt;color:yellow;">Y</td>
             <td WIDTH="3"></td>
-            <td VALIGN="bottom" ID="WplaneY" WIDTH="120" STYLE="font-size:7pt;color:white;"></td>
-        </tr>
-        </table>
-        </td>
-    </tr>
+            <td VALIGN="bottom" ID="WplaneY" WIDTH="170" STYLE="font-size:11pt;color:white;"></td>
+		</tr>
+		</table>
+		</td>
+	</tr>
     <tr><td HEIGHT="10"></td></tr>
     <tr><td VALIGN="top" ALIGN="center"><DIV ALIGN="center" STYLE="position:relative;background-color:white;" ID="WPLANElayers_pile"></DIV></td></tr>
     <tr><td HEIGHT="10"></td></tr>
